<resources>
    <string name="app_name">Driver</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_without_caps">Sign In</string>
    <string name="password">Password</string>
    <string name="email_id_mobile_no">Email Id/Mobile No</string>
    <string name="user_id">User Id</string>
    <string name="user_type">User Type</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="if_you_are_new_user_click_on">If you are New user Click on ?</string>
    <string name="register">Register</string>
    <string name="if_registered_but_not_verified_click_on">If registered but not verified Click on ?</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="user_address">User Address</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="already_registered">Already Registered ?</string>
    <string name="user_type_">-- User Type --</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>

    <string-array name="user_type">
        <item>Cab Owner/Agent/Driver</item>
        <item>Traveller</item>
    </string-array>
</resources>