<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/tvSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewLine"
        android:layout_height="1dp"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/tvSignInTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/emailRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/email"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/phoneNoRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/phone_number"/>

    </RadioGroup>
<!--    <RadioButton-->
<!--        android:id="@+id/emailRadioBtn"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="0dp"-->
<!--        android:gravity="center"-->
<!--        android:checked="true"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvEmail"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvEmail"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tvEmail"-->
<!--        app:layout_constraintHorizontal_chainStyle="packed"-->
<!--        />-->



<!--    <RadioButton-->
<!--        android:id="@+id/phoneNoRadioBtn"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="0dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvEmail"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvPhoneNo"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvPhoneNo"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tvPhoneNo"-->
<!--        app:layout_constraintHorizontal_chainStyle="packed"-->
<!--        />-->


    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/title_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:background="@drawable/bg_curve_stroke_box"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="12dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/tvPhoneNoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number"
        android:textColor="@color/title_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <EditText
        android:visibility="invisible"
        android:id="@+id/etPhoneNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:background="@drawable/bg_curve_stroke_box"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="12dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_curve_box"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

</androidx.constraintlayout.widget.ConstraintLayout>